--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@ionic/react": "^8.0.0",
     "mapbox-gl": "^3.3.0",
     "react": "^18.2.0",
